--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "nodemailer": "^7.0.6",
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.10"
   }
 }
